--- a/contact.html
+++ b/contact.html
@@ -211,17 +211,17 @@
     </section>
 
     <!-- Google Maps -->
-   <!--  <div class="map-area mb-100">
+    <div class="map-area mb-100">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div id="googleMap" class="googleMap"></div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.8496086611585!2d36.80005481475391!3d-1.2626038990790813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f176adea0f525%3A0x587d50bcb2ff7687!2sSankara%20Nairobi%2C%20Autograph%20Collection!5e0!3m2!1sen!2ske!4v1606572777531!5m2!1sen!2ske" width="1200" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
-    <!-- ##### Footer Area Start ##### -->
+   <!-- ##### Footer Area Start ##### -->
     <footer class="footer-area section-padding-100-0 bg-img gradient-background-overlay" style="background-image: url(img/bg-img/cta.jpg);">
         <!-- Main Footer Area -->
         <div class="main-footer-area">
@@ -240,7 +240,7 @@
                             <div class="footer-logo my-4">
                                 <img src="img/core-img/logo.png" alt="">
                             </div>
-                            <p><b>?We are a construction company based in Nairobi kenya. We are the best constrction company offering the following....</b>
+                            <p><b>We are a construction company based in Nairobi kenya. We are the best constrction company offering the following....</b>
                             </p>
                         </div>
                     </div>
@@ -262,9 +262,9 @@
                             </div>
                             <!-- Address --> 
                             <div class="address">
-                                <h6><img src="img/icons/phone-call.png" alt=""> +254 714 250 700</h6>
-                                <h6><img src="img/icons/envelope.png" alt="">info@primeplan.com</h6>
-                                <h6><img src="img/icons/location.png" alt=""> Nairobi, Kenyatta Ave, DB house.</h6>
+                                <h6><img src="img/icons/phone-call.png" alt="">+254 720 628 137</h6>
+                                <h6><img src="img/icons/envelope.png" alt="">info@kimanisankara.co.ke</h6>
+                                <h6><img src="img/icons/location.png" alt=""> Nairobi, Kenyatta Ave, DB house,<br> P.O Box 1234-00100.</h6>
                             </div>
                         </div>
                     </div>
@@ -327,7 +327,7 @@
         <!-- Copywrite Text -->
         <div class="copywrite-text d-flex align-items-center justify-content-center">
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |This Site is Developed  <i  aria-hidden="true"></i> by <a href="https://dataconsultancy.co.ke" target="_blank">Data Consultancy Limited</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |This Site is Developed  <i  aria-hidden="true"></i> by <a href="https://softwaretechn.co.ke" target="_blank">Software Technology Kenya</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         </div>
     </footer>
