--- a/listings.html
+++ b/listings.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>Prime Plan Limited</title>
+    <title>Kimani Sankara Limited<</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -32,14 +32,14 @@
         <div class="top-header-area">
             <div class="h-100 d-md-flex justify-content-between align-items-center">
                 <div class="email-address">
-                    <a href="mailto:contact@southtemplate.com">info@primeplan.com</a>
+                     <a href="mailto:info@kimanisankara.co.ke">info@kimanisankara.co.ke</a>
                 </div>
                 <div class="phone-number d-flex">
                     <div class="icon">
                         <img src="img/icons/phone-call.png" alt="">
                     </div>
                     <div class="number">
-                        <a href="tel:+45 677 8993000 223">+254 714 250 700</a>
+                        <a href="tel:+254 720 628 137">+254 720 628 137</a>
                     </div>
                 </div>
             </div>
@@ -581,7 +581,7 @@
                             <div class="footer-logo my-4">
                                 <img src="img/core-img/logo.png" alt="">
                             </div>
-                            <p><b>?We are a construction company based in Nairobi kenya. We are the best constrction company offering the following....</b>
+                            <p><b>We are a construction company based in Nairobi kenya. We are the best constrction company offering the following....</b>
                             </p>
                         </div>
                     </div>
@@ -603,9 +603,9 @@
                             </div>
                             <!-- Address --> 
                             <div class="address">
-                                <h6><img src="img/icons/phone-call.png" alt=""> +254 714 250 700</h6>
-                                <h6><img src="img/icons/envelope.png" alt="">info@primeplan.com</h6>
-                                <h6><img src="img/icons/location.png" alt=""> Nairobi, Kenyatta Ave, DB house.</h6>
+                                <h6><img src="img/icons/phone-call.png" alt="">+254 720 628 137</h6>
+                                <h6><img src="img/icons/envelope.png" alt="">info@kimanisankara.co.ke</h6>
+                                <h6><img src="img/icons/location.png" alt=""> Nairobi, Kenyatta Ave, DB house,<br> P.O Box 1234-00100.</h6>
                             </div>
                         </div>
                     </div>
@@ -668,7 +668,7 @@
         <!-- Copywrite Text -->
         <div class="copywrite-text d-flex align-items-center justify-content-center">
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |This Site is Developed  <i  aria-hidden="true"></i> by <a href="https://dataconsultancy.co.ke" target="_blank">Data Consultancy Limited</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |This Site is Developed  <i  aria-hidden="true"></i> by <a href="https://softwaretechn.co.ke" target="_blank">Software Technology Kenya</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         </div>
     </footer>
