--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>Prime Plan Limited</title>
+    <title>Kimani Sankara Limited</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -32,14 +32,14 @@
         <div class="top-header-area">
             <div class="h-100 d-md-flex justify-content-between align-items-center">
                 <div class="email-address">
-                    <a href="mailto:contact@southtemplate.com">info@primeplan.com</a>
+                    <a href="mailto:info@kimanisankara.co.ke">info@kimanisankara.co.ke</a>
                 </div>
                 <div class="phone-number d-flex">
                     <div class="icon">
                         <img src="img/icons/phone-call.png" alt="">
                     </div>
                     <div class="number">
-                        <a href="tel:+45 677 8993000 223">+254 714 250 700</a>
+                        <a href="tel:+254 720 628 137">+254 720 628 137</a>
                     </div>
                 </div>
             </div>
