--- a/single-blog.html
+++ b/single-blog.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>South - Real Estate Agency Template | Single Blog</title>
+    <title>Kimani Sankara Limited</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -32,14 +32,14 @@
         <div class="top-header-area">
             <div class="h-100 d-md-flex justify-content-between align-items-center">
                 <div class="email-address">
-                    <a href="mailto:contact@southtemplate.com">contact@southtemplate.com</a>
+                     <a href="mailto:info@kimanisankara.co.ke">info@kimanisankara.co.ke</a>
                 </div>
                 <div class="phone-number d-flex">
                     <div class="icon">
                         <img src="img/icons/phone-call.png" alt="">
                     </div>
                     <div class="number">
-                        <a href="tel:+45 677 8993000 223">+45 677 8993000 223</a>
+                        <a href="tel:+254 720 628 137">+254 720 628 137</a>
                     </div>
                 </div>
             </div>
@@ -400,7 +400,7 @@
     </section>
     <!-- ##### Blog Area End ##### -->
 
-    <!-- ##### Footer Area Start ##### -->
+   <!-- ##### Footer Area Start ##### -->
     <footer class="footer-area section-padding-100-0 bg-img gradient-background-overlay" style="background-image: url(img/bg-img/cta.jpg);">
         <!-- Main Footer Area -->
         <div class="main-footer-area">
@@ -419,7 +419,8 @@
                             <div class="footer-logo my-4">
                                 <img src="img/core-img/logo.png" alt="">
                             </div>
-                            <p>Integer nec bibendum lacus. Suspen disse dictum enim sit amet libero males uada feugiat. Praesent malesuada.</p>
+                            <p><b>We are a construction company based in Nairobi kenya. We are the best constrction company offering the following....</b>
+                            </p>
                         </div>
                     </div>
 
@@ -433,16 +434,16 @@
                             <!-- Office Hours -->
                             <div class="weekly-office-hours">
                                 <ul>
-                                    <li class="d-flex align-items-center justify-content-between"><span>Monday - Friday</span> <span>09 AM - 19 PM</span></li>
+                                    <li class="d-flex align-items-center justify-content-between"><span>Monday - Friday</span> <span>08 AM - 5 PM</span></li>
                                     <li class="d-flex align-items-center justify-content-between"><span>Saturday</span> <span>09 AM - 14 PM</span></li>
                                     <li class="d-flex align-items-center justify-content-between"><span>Sunday</span> <span>Closed</span></li>
                                 </ul>
                             </div>
-                            <!-- Address -->
+                            <!-- Address --> 
                             <div class="address">
-                                <h6><img src="img/icons/phone-call.png" alt=""> +45 677 8993000 223</h6>
-                                <h6><img src="img/icons/envelope.png" alt=""> office@template.com</h6>
-                                <h6><img src="img/icons/location.png" alt=""> Main Str. no 45-46, b3, 56832, Los Angeles, CA</h6>
+                                <h6><img src="img/icons/phone-call.png" alt="">+254 720 628 137</h6>
+                                <h6><img src="img/icons/envelope.png" alt="">info@kimanisankara.co.ke</h6>
+                                <h6><img src="img/icons/location.png" alt=""> Nairobi, Kenyatta Ave, DB house,<br> P.O Box 1234-00100.</h6>
                             </div>
                         </div>
                     </div>
@@ -505,7 +506,7 @@
         <!-- Copywrite Text -->
         <div class="copywrite-text d-flex align-items-center justify-content-center">
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |This Site is Developed  <i  aria-hidden="true"></i> by <a href="https://softwaretechn.co.ke" target="_blank">Software Technology Kenya</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         </div>
     </footer>
