--- a/about-us.html
+++ b/about-us.html
@@ -84,7 +84,7 @@
                                 <li><a href="about-us.html">About Us</a></li>
                                 <li><a href="listings.html">Properties</a></li>
                                 <li><a href="blog.html">Blog</a></li>
-                                <li><a href="#">Mega Menu</a>
+                                <li><a href="#">Services</a>
                                     <div class="megamenu">
                                         <ul class="single-mega cn-col-4">
                                             <li class="title">Headline 1</li>
