--- a/about-us.html
+++ b/about-us.html
@@ -71,6 +71,45 @@
                         <div class="classynav">
                             <ul>
                                 <li><a href="index.html">Home</a></li>
+                                <li><a href="about-us.html">About Us</a></li>
+                                 <li><a href="#">Services</a>
+                                    <div class="megamenu">
+                                        <ul class="single-mega cn-col-4">
+                                            <li class="title">CONSTRUCTIONS</li>
+                                            <li><a href="#">Residential Houses</a></li>
+                                            <li><a href="#">Rental Flats</a></li>
+                                            <li><a href="#">Roads</a></li>
+                                            <li><a href="#">Bridges</a></li>
+                                            <li><a href="#">School & Churches</a></li>
+                                        </ul>
+                                        <ul class="single-mega cn-col-4">
+                                            <li class="title">SUPPLIES</li>
+                                            <li><a href="#">Office Stationaries</a></li>
+                                            <li><a href="#">Constraction Materials</a></li>
+                                            <li><a href="#">Promotional Items</a></li>
+                                            <li><a href="#">Kitchen Items</a></li>
+                                            <li><a href="#">School Items</a></li>
+                                        </ul>
+                                        <ul class="single-mega cn-col-4">
+                                            <li class="title">GRAPHIC DESIGN AND PRINTING</li>
+                                            <li><a href="#">Ebook Design</a></li>
+                                            <li><a href="#">Promotional Item Printing</a></li>
+                                            <li><a href="#">Logo Design</a></li>
+                                            <li><a href="#">Company Branding</a></li>
+                                            <li><a href="#">General printing</a></li>
+                                        </ul>
+                                        <ul class="single-mega cn-col-4">
+                                            <li class="title">Gift & Community Services</li>
+                                            <li><a href="#">Food Distrubution</a></li>
+                                            <li><a href="#">Ophanage Visiting</a></li>
+                                            <li><a href="#">Branded T shirts</a></li>
+                                            <li><a href="#">Branded Notebooks</a></li>
+                                            <li><a href="#">Branded Cups</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+
+
                                 <li><a href="#">Our Works</a>
                                     <ul class="dropdown">
                                         <li><a href="#">Listings</a>
@@ -81,48 +120,13 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a href="about-us.html">About Us</a></li>
+                                
                                 <li><a href="listings.html">Properties</a></li>
                                 <li><a href="blog.html">Blog</a></li>
-                                <li><a href="#">Services</a>
-                                    <div class="megamenu">
-                                        <ul class="single-mega cn-col-4">
-                                            <li class="title">Headline 1</li>
-                                            <li><a href="#">Mega Menu Item 1</a></li>
-                                            <li><a href="#">Mega Menu Item 2</a></li>
-                                            <li><a href="#">Mega Menu Item 3</a></li>
-                                            <li><a href="#">Mega Menu Item 4</a></li>
-                                            <li><a href="#">Mega Menu Item 5</a></li>
-                                        </ul>
-                                        <ul class="single-mega cn-col-4">
-                                            <li class="title">Headline 2</li>
-                                            <li><a href="#">Mega Menu Item 1</a></li>
-                                            <li><a href="#">Mega Menu Item 2</a></li>
-                                            <li><a href="#">Mega Menu Item 3</a></li>
-                                            <li><a href="#">Mega Menu Item 4</a></li>
-                                            <li><a href="#">Mega Menu Item 5</a></li>
-                                        </ul>
-                                        <ul class="single-mega cn-col-4">
-                                            <li class="title">Headline 3</li>
-                                            <li><a href="#">Mega Menu Item 1</a></li>
-                                            <li><a href="#">Mega Menu Item 2</a></li>
-                                            <li><a href="#">Mega Menu Item 3</a></li>
-                                            <li><a href="#">Mega Menu Item 4</a></li>
-                                            <li><a href="#">Mega Menu Item 5</a></li>
-                                        </ul>
-                                        <ul class="single-mega cn-col-4">
-                                            <li class="title">Headline 4</li>
-                                            <li><a href="#">Mega Menu Item 1</a></li>
-                                            <li><a href="#">Mega Menu Item 2</a></li>
-                                            <li><a href="#">Mega Menu Item 3</a></li>
-                                            <li><a href="#">Mega Menu Item 4</a></li>
-                                            <li><a href="#">Mega Menu Item 5</a></li>
-                                        </ul>
-                                    </div>
-                                </li>
+
+                               
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
-
                             <!-- Search Form -->
                             <div class="south-search-form">
                                 <form action="#" method="post">
@@ -347,7 +351,7 @@
                 <div class="col-12">
                     <div class="section-heading">
                         <h2>Meet The Team</h2>
-                        <p>Prime Plan Limited A Team</p>
+                        <p>Kimani Sankara A Team</p>
                     </div>
                 </div>
             </div>
@@ -364,12 +368,12 @@
                         <div class="team-member-info">
                             <div class="section-heading">
                                 <img src="img/icons/prize.png" alt="">
-                                <h2>Jeremy Scott</h2>
+                                <h2>Kimani Sankara</h2>
                                 <p>Managing Dictor</p>
                             </div>
                             <div class="address">
-                                <h6><img src="img/icons/phone-call.png" alt=""> +45 677 8993000 223</h6>
-                                <h6><img src="img/icons/envelope.png" alt=""> jeremy@primeplan.com</h6>
+                                <h6><img src="img/icons/phone-call.png" alt="">+254 720 628 137</h6>
+                                <h6><img src="img/icons/envelope.png" alt="">kimani@kimanisankara.co.ke</h6>
                             </div>
                         </div>
                     </div>
@@ -389,8 +393,8 @@
                                 <p>Marketing Director</p>
                             </div>
                             <div class="address">
-                                <h6><img src="img/icons/phone-call.png" alt=""> +45 677 8993000 223</h6>
-                                <h6><img src="img/icons/envelope.png" alt=""> maria@primeplan.com</h6>
+                                <h6><img src="img/icons/phone-call.png" alt=""> +254 677 000 223</h6>
+                                <h6><img src="img/icons/envelope.png" alt=""> maria@kimanisankara.co.ke</h6>
                             </div>
                         </div>
                     </div>
@@ -410,8 +414,8 @@
                                 <p>Realtor</p>
                             </div>
                             <div class="address">
-                                <h6><img src="img/icons/phone-call.png" alt=""> +45 677 8993000 223</h6>
-                                <h6><img src="img/icons/envelope.png" alt=""> joe@primeplan.com</h6>
+                                <h6><img src="img/icons/phone-call.png" alt=""> +254 677 899 253</h6>
+                                <h6><img src="img/icons/envelope.png" alt=""> joe@kimanisankara.co.ke</h6>
                             </div>
                         </div>
                     </div>
@@ -526,9 +530,9 @@
 
         <!-- Copywrite Text -->
         <div class="copywrite-text d-flex align-items-center justify-content-center">
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            <p>
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |This Site is Developed  <i  aria-hidden="true"></i> by <a href="https://softwaretechn.co.ke" target="_blank">Software Technology Kenya</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
         </div>
     </footer>
     <!-- ##### Footer Area End ##### -->
