--- a/single-blog.html
+++ b/single-blog.html
@@ -71,65 +71,60 @@
                         <div class="classynav">
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="#">Pages</a>
+                                <li><a href="about-us.html">About Us</a></li>
+                                 <li><a href="#">Services</a>
+                                    <div class="megamenu">
+                                        <ul class="single-mega cn-col-4">
+                                            <li class="title">CONSTRUCTIONS</li>
+                                            <li><a href="#">Residential Houses</a></li>
+                                            <li><a href="#">Rental Flats</a></li>
+                                            <li><a href="#">Roads</a></li>
+                                            <li><a href="#">Bridges</a></li>
+                                            <li><a href="#">School & Churches</a></li>
+                                        </ul>
+                                        <ul class="single-mega cn-col-4">
+                                            <li class="title">SUPPLIES</li>
+                                            <li><a href="#">Office Stationaries</a></li>
+                                            <li><a href="#">Constraction Materials</a></li>
+                                            <li><a href="#">Promotional Items</a></li>
+                                            <li><a href="#">Kitchen Items</a></li>
+                                            <li><a href="#">School Items</a></li>
+                                        </ul>
+                                        <ul class="single-mega cn-col-4">
+                                            <li class="title">GRAPHIC DESIGN AND PRINTING</li>
+                                            <li><a href="#">Ebook Design</a></li>
+                                            <li><a href="#">Promotional Item Printing</a></li>
+                                            <li><a href="#">Logo Design</a></li>
+                                            <li><a href="#">Company Branding</a></li>
+                                            <li><a href="#">General printing</a></li>
+                                        </ul>
+                                        <ul class="single-mega cn-col-4">
+                                            <li class="title">Gift & Community Services</li>
+                                            <li><a href="#">Food Distrubution</a></li>
+                                            <li><a href="#">Ophanage Visiting</a></li>
+                                            <li><a href="#">Branded T shirts</a></li>
+                                            <li><a href="#">Branded Notebooks</a></li>
+                                            <li><a href="#">Branded Cups</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+
+
+                                <li><a href="#">Our Works</a>
                                     <ul class="dropdown">
-                                        <li><a href="index.html">Home</a></li>
-                                        <li><a href="about-us.html">About Us</a></li>
                                         <li><a href="#">Listings</a>
                                             <ul class="dropdown">
                                                 <li><a href="listings.html">Listings</a></li>
                                                 <li><a href="single-listings.html">Single Listings</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="#">Blog</a>
-                                            <ul class="dropdown">
-                                                <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="single-blog.html">Single Blog</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="contact.html">Contact</a></li>
-                                        <li><a href="elements.html">Elements</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="about-us.html">About Us</a></li>
+                                
                                 <li><a href="listings.html">Properties</a></li>
                                 <li><a href="blog.html">Blog</a></li>
-                                <li><a href="#">Services</a>
-                                    <div class="megamenu">
-                                        <ul class="single-mega cn-col-4">
-                                            <li class="title">Headline 1</li>
-                                            <li><a href="#">Mega Menu Item 1</a></li>
-                                            <li><a href="#">Mega Menu Item 2</a></li>
-                                            <li><a href="#">Mega Menu Item 3</a></li>
-                                            <li><a href="#">Mega Menu Item 4</a></li>
-                                            <li><a href="#">Mega Menu Item 5</a></li>
-                                        </ul>
-                                        <ul class="single-mega cn-col-4">
-                                            <li class="title">Headline 2</li>
-                                            <li><a href="#">Mega Menu Item 1</a></li>
-                                            <li><a href="#">Mega Menu Item 2</a></li>
-                                            <li><a href="#">Mega Menu Item 3</a></li>
-                                            <li><a href="#">Mega Menu Item 4</a></li>
-                                            <li><a href="#">Mega Menu Item 5</a></li>
-                                        </ul>
-                                        <ul class="single-mega cn-col-4">
-                                            <li class="title">Headline 3</li>
-                                            <li><a href="#">Mega Menu Item 1</a></li>
-                                            <li><a href="#">Mega Menu Item 2</a></li>
-                                            <li><a href="#">Mega Menu Item 3</a></li>
-                                            <li><a href="#">Mega Menu Item 4</a></li>
-                                            <li><a href="#">Mega Menu Item 5</a></li>
-                                        </ul>
-                                        <ul class="single-mega cn-col-4">
-                                            <li class="title">Headline 4</li>
-                                            <li><a href="#">Mega Menu Item 1</a></li>
-                                            <li><a href="#">Mega Menu Item 2</a></li>
-                                            <li><a href="#">Mega Menu Item 3</a></li>
-                                            <li><a href="#">Mega Menu Item 4</a></li>
-                                            <li><a href="#">Mega Menu Item 5</a></li>
-                                        </ul>
-                                    </div>
-                                </li>
+
+                               
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
 
