--- a/single-listings.html
+++ b/single-listings.html
@@ -71,6 +71,45 @@
                         <div class="classynav">
                             <ul>
                                 <li><a href="index.html">Home</a></li>
+                                <li><a href="about-us.html">About Us</a></li>
+                                 <li><a href="#">Services</a>
+                                    <div class="megamenu">
+                                        <ul class="single-mega cn-col-4">
+                                            <li class="title">CONSTRUCTIONS</li>
+                                            <li><a href="#">Residential Houses</a></li>
+                                            <li><a href="#">Rental Flats</a></li>
+                                            <li><a href="#">Roads</a></li>
+                                            <li><a href="#">Bridges</a></li>
+                                            <li><a href="#">School & Churches</a></li>
+                                        </ul>
+                                        <ul class="single-mega cn-col-4">
+                                            <li class="title">SUPPLIES</li>
+                                            <li><a href="#">Office Stationaries</a></li>
+                                            <li><a href="#">Constraction Materials</a></li>
+                                            <li><a href="#">Promotional Items</a></li>
+                                            <li><a href="#">Kitchen Items</a></li>
+                                            <li><a href="#">School Items</a></li>
+                                        </ul>
+                                        <ul class="single-mega cn-col-4">
+                                            <li class="title">GRAPHIC DESIGN AND PRINTING</li>
+                                            <li><a href="#">Ebook Design</a></li>
+                                            <li><a href="#">Promotional Item Printing</a></li>
+                                            <li><a href="#">Logo Design</a></li>
+                                            <li><a href="#">Company Branding</a></li>
+                                            <li><a href="#">General printing</a></li>
+                                        </ul>
+                                        <ul class="single-mega cn-col-4">
+                                            <li class="title">Gift & Community Services</li>
+                                            <li><a href="#">Food Distrubution</a></li>
+                                            <li><a href="#">Ophanage Visiting</a></li>
+                                            <li><a href="#">Branded T shirts</a></li>
+                                            <li><a href="#">Branded Notebooks</a></li>
+                                            <li><a href="#">Branded Cups</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+
+
                                 <li><a href="#">Our Works</a>
                                     <ul class="dropdown">
                                         <li><a href="#">Listings</a>
@@ -81,45 +120,11 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a href="about-us.html">About Us</a></li>
+                                
                                 <li><a href="listings.html">Properties</a></li>
                                 <li><a href="blog.html">Blog</a></li>
-                                <li><a href="#">Services</a>
-                                    <div class="megamenu">
-                                        <ul class="single-mega cn-col-4">
-                                            <li class="title">Headline 1</li>
-                                            <li><a href="#">Mega Menu Item 1</a></li>
-                                            <li><a href="#">Mega Menu Item 2</a></li>
-                                            <li><a href="#">Mega Menu Item 3</a></li>
-                                            <li><a href="#">Mega Menu Item 4</a></li>
-                                            <li><a href="#">Mega Menu Item 5</a></li>
-                                        </ul>
-                                        <ul class="single-mega cn-col-4">
-                                            <li class="title">Headline 2</li>
-                                            <li><a href="#">Mega Menu Item 1</a></li>
-                                            <li><a href="#">Mega Menu Item 2</a></li>
-                                            <li><a href="#">Mega Menu Item 3</a></li>
-                                            <li><a href="#">Mega Menu Item 4</a></li>
-                                            <li><a href="#">Mega Menu Item 5</a></li>
-                                        </ul>
-                                        <ul class="single-mega cn-col-4">
-                                            <li class="title">Headline 3</li>
-                                            <li><a href="#">Mega Menu Item 1</a></li>
-                                            <li><a href="#">Mega Menu Item 2</a></li>
-                                            <li><a href="#">Mega Menu Item 3</a></li>
-                                            <li><a href="#">Mega Menu Item 4</a></li>
-                                            <li><a href="#">Mega Menu Item 5</a></li>
-                                        </ul>
-                                        <ul class="single-mega cn-col-4">
-                                            <li class="title">Headline 4</li>
-                                            <li><a href="#">Mega Menu Item 1</a></li>
-                                            <li><a href="#">Mega Menu Item 2</a></li>
-                                            <li><a href="#">Mega Menu Item 3</a></li>
-                                            <li><a href="#">Mega Menu Item 4</a></li>
-                                            <li><a href="#">Mega Menu Item 5</a></li>
-                                        </ul>
-                                    </div>
-                                </li>
+
+                               
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
 
@@ -230,8 +235,8 @@
                             <div class="realtor---info">
                                 <h2>Jeremy Scott</h2>
                                 <p>Managing Director</p>
-                                <h6><img src="img/icons/phone-call.png" alt=""> +45 677 8993000 223</h6>
-                                <h6><img src="img/icons/envelope.png" alt=""> jeremy@primeplan.com</h6>
+                                <h6><img src="img/icons/phone-call.png" alt="">+254 720 628 137</h6>
+                                <h6><img src="img/icons/envelope.png" alt="">info@kimanisankara.co.ke</h6>
                             </div>
                             <div class="realtor--contact-form">
                                 <form action="#" method="post">
@@ -301,7 +306,7 @@
                             <!-- Address --> 
                             <div class="address">
                                 <h6><img src="img/icons/phone-call.png" alt="">+254 720 628 137</h6>
-                                <h6><img src="img/icons/envelope.png" alt="">info@kimanisankara.co.ke</h6>
+                                <h6><img src="img/icons/envelope.png" alt="">kimani@kimanisankara.co.ke</h6>
                                 <h6><img src="img/icons/location.png" alt=""> Nairobi, Kenyatta Ave, DB house,<br> P.O Box 1234-00100.</h6>
                             </div>
                         </div>
