--- a/blog.html
+++ b/blog.html
@@ -376,7 +376,7 @@
     </section>
     <!-- ##### Blog Area End ##### -->
 
-   <!-- ##### Footer Area Start ##### -->
+       <!-- ##### Footer Area Start ##### -->
     <footer class="footer-area section-padding-100-0 bg-img gradient-background-overlay" style="background-image: url(img/bg-img/cta.jpg);">
         <!-- Main Footer Area -->
         <div class="main-footer-area">
@@ -395,7 +395,7 @@
                             <div class="footer-logo my-4">
                                 <img src="img/core-img/logo.png" alt="">
                             </div>
-                            <p><b>We are a construction company based in Nairobi kenya. We are the best constrction company offering the following....</b>
+                            <p>Elohay Empire Ltd is a registered business entity engaged in contracting and supply of a variety of....<a href="about-us.html">Read More</a>
                             </p>
                         </div>
                     </div>
@@ -417,9 +417,10 @@
                             </div>
                             <!-- Address --> 
                             <div class="address">
-                                <h6><img src="img/icons/phone-call.png" alt="">+254 720 628 137</h6>
-                                <h6><img src="img/icons/envelope.png" alt="">info@kimanisankara.co.ke</h6>
-                                <h6><img src="img/icons/location.png" alt=""> Nairobi, Kenyatta Ave, DB house,<br> P.O Box 1234-00100.</h6>
+                                <h6><img src="img/icons/phone-call.png" alt="">+254721378781 I +254737995755
+</h6>
+                                <h6><img src="img/icons/envelope.png" alt="">info@elohayempire.co.ke</h6>
+                                <h6><img src="img/icons/location.png" alt=""> AGIP HOUSE 2ND FLOOR,<br> ROOM 218.<br>P. O. BOX 66038 00800, NAIROBI, KENYA</h6>
                             </div>
                         </div>
                     </div>
@@ -435,16 +436,13 @@
                             <ul class="useful-links-nav d-flex align-items-center">
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#">About us</a></li>
-                                <li><a href="#">About us</a></li>
+                                <li><a href="#">Gifts</a></li>
                                 <li><a href="#">Services</a></li>
-                                <li><a href="#">Properties</a></li>
-                                <li><a href="#">Listings</a></li>
-                                <li><a href="#">Testimonials</a></li>
-                                <li><a href="#">Properties</a></li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">Testimonials</a></li>
+                                <li><a href="#">Community Services</a></li>
+                                <li><a href="#">Supplies</a></li>
+                                <li><a href="#">Roads</a></li>
+                                <li><a href="#">House Construction</a></li>
                                 <li><a href="#">Contact</a></li>
-                                <li><a href="#">Elements</a></li>
                                 <li><a href="#">FAQ</a></li>
                             </ul>
                         </div>
@@ -455,21 +453,21 @@
                         <div class="footer-widget-area mb-100">
                             <!-- Widget Title -->
                             <div class="widget-title">
-                                <h6>Featured Properties</h6>
+                                <h6>Featured Items</h6>
                             </div>
                             <!-- Featured Properties Slides -->
                             <div class="featured-properties-slides owl-carousel">
                                 <!-- Single Slide -->
                                 <div class="single-featured-properties-slide">
-                                    <a href="#"><img src="img/bg-img/fea-product.jpg" alt=""></a>
+                                    <a href="#"><img src="img/pic/ee-04.png" alt=""></a>
                                 </div>
                                 <!-- Single Slide -->
                                 <div class="single-featured-properties-slide">
-                                    <a href="#"><img src="img/bg-img/fea-product.jpg" alt=""></a>
+                                    <a href="#"><img src="img/pic/ee-40.png" alt=""></a>
                                 </div>
                                 <!-- Single Slide -->
                                 <div class="single-featured-properties-slide">
-                                    <a href="#"><img src="img/bg-img/fea-product.jpg" alt=""></a>
+                                    <a href="#"><img src="img/pic/ee-26.png" alt=""></a>
                                 </div>
                             </div>
                         </div>
