--- a/elements.html
+++ b/elements.html
@@ -405,7 +405,7 @@
     </section>
     <!-- ##### Elements Area End ##### -->
 
-    <!-- ##### Footer Area Start ##### -->
+        <!-- ##### Footer Area Start ##### -->
     <footer class="footer-area section-padding-100-0 bg-img gradient-background-overlay" style="background-image: url(img/bg-img/cta.jpg);">
         <!-- Main Footer Area -->
         <div class="main-footer-area">
@@ -424,7 +424,8 @@
                             <div class="footer-logo my-4">
                                 <img src="img/core-img/logo.png" alt="">
                             </div>
-                            <p>Integer nec bibendum lacus. Suspen disse dictum enim sit amet libero males uada feugiat. Praesent malesuada.</p>
+                            <p>Elohay Empire Ltd is a registered business entity engaged in contracting and supply of a variety of....<a href="about-us.html">Read More</a>
+                            </p>
                         </div>
                     </div>
 
@@ -438,16 +439,17 @@
                             <!-- Office Hours -->
                             <div class="weekly-office-hours">
                                 <ul>
-                                    <li class="d-flex align-items-center justify-content-between"><span>Monday - Friday</span> <span>09 AM - 19 PM</span></li>
+                                    <li class="d-flex align-items-center justify-content-between"><span>Monday - Friday</span> <span>08 AM - 5 PM</span></li>
                                     <li class="d-flex align-items-center justify-content-between"><span>Saturday</span> <span>09 AM - 14 PM</span></li>
                                     <li class="d-flex align-items-center justify-content-between"><span>Sunday</span> <span>Closed</span></li>
                                 </ul>
                             </div>
-                            <!-- Address -->
+                            <!-- Address --> 
                             <div class="address">
-                                <h6><img src="img/icons/phone-call.png" alt=""> +45 677 8993000 223</h6>
-                                <h6><img src="img/icons/envelope.png" alt=""> office@template.com</h6>
-                                <h6><img src="img/icons/location.png" alt=""> Main Str. no 45-46, b3, 56832, Los Angeles, CA</h6>
+                                <h6><img src="img/icons/phone-call.png" alt="">+254721378781 I +254737995755
+</h6>
+                                <h6><img src="img/icons/envelope.png" alt="">info@elohayempire.co.ke</h6>
+                                <h6><img src="img/icons/location.png" alt=""> AGIP HOUSE 2ND FLOOR,<br> ROOM 218.<br>P. O. BOX 66038 00800, NAIROBI, KENYA</h6>
                             </div>
                         </div>
                     </div>
@@ -463,16 +465,13 @@
                             <ul class="useful-links-nav d-flex align-items-center">
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#">About us</a></li>
-                                <li><a href="#">About us</a></li>
+                                <li><a href="#">Gifts</a></li>
                                 <li><a href="#">Services</a></li>
-                                <li><a href="#">Properties</a></li>
-                                <li><a href="#">Listings</a></li>
-                                <li><a href="#">Testimonials</a></li>
-                                <li><a href="#">Properties</a></li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">Testimonials</a></li>
+                                <li><a href="#">Community Services</a></li>
+                                <li><a href="#">Supplies</a></li>
+                                <li><a href="#">Roads</a></li>
+                                <li><a href="#">House Construction</a></li>
                                 <li><a href="#">Contact</a></li>
-                                <li><a href="#">Elements</a></li>
                                 <li><a href="#">FAQ</a></li>
                             </ul>
                         </div>
@@ -483,21 +482,21 @@
                         <div class="footer-widget-area mb-100">
                             <!-- Widget Title -->
                             <div class="widget-title">
-                                <h6>Featured Properties</h6>
+                                <h6>Featured Items</h6>
                             </div>
                             <!-- Featured Properties Slides -->
                             <div class="featured-properties-slides owl-carousel">
                                 <!-- Single Slide -->
                                 <div class="single-featured-properties-slide">
-                                    <a href="#"><img src="img/bg-img/fea-product.jpg" alt=""></a>
+                                    <a href="#"><img src="img/pic/ee-04.png" alt=""></a>
                                 </div>
                                 <!-- Single Slide -->
                                 <div class="single-featured-properties-slide">
-                                    <a href="#"><img src="img/bg-img/fea-product.jpg" alt=""></a>
+                                    <a href="#"><img src="img/pic/ee-40.png" alt=""></a>
                                 </div>
                                 <!-- Single Slide -->
                                 <div class="single-featured-properties-slide">
-                                    <a href="#"><img src="img/bg-img/fea-product.jpg" alt=""></a>
+                                    <a href="#"><img src="img/pic/ee-26.png" alt=""></a>
                                 </div>
                             </div>
                         </div>
@@ -510,7 +509,7 @@
         <!-- Copywrite Text -->
         <div class="copywrite-text d-flex align-items-center justify-content-center">
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |This Site is Developed  <i  aria-hidden="true"></i> by <a href="https://softwaretechn.co.ke" target="_blank">Software Technology Kenya</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         </div>
     </footer>
