--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <nav class="classy-navbar justify-content-between" id="southNav">
 
                     <!-- Logo -->
-                    <a class="nav-brand" href="index.html"><img src="img/core-img/logo.png" alt=""></a>
+                    <a class="nav-brand" href="index.html"><img src="img/core-img/logo1.png" alt=""></a>
 
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler">
@@ -121,7 +121,7 @@
                                     </ul>
                                 </li>
                                 
-                                <li><a href="listings.html">Properties</a></li>
+                                <li><a href="expertise.html">Our Expertise</a></li>
                                 <li><a href="blog.html">Blog</a></li>
 
                                
@@ -549,6 +549,82 @@
                         </div>
                     </div>
                 </div>
+                <!-- End Sale -->
+
+                <!-- Single Featured Property -->
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="single-featured-property mb-50 wow fadeInUp" data-wow-delay="600ms">
+                        <!-- Property Thumbnail -->
+                        <div class="property-thumb">
+                            <img src="img/pic/ee-09.png" alt="">
+
+                            <div class="tag">
+                                <span>For Sale</span>
+                            </div>
+                            <div class="list-price">
+                                <p>Ksh. 500.00</p>
+                            </div>
+                        </div>
+                        <!-- Property Content -->
+                        <div class="property-content">
+                            <h5>Heat Press Shirt Printing</h5>
+                            <p class="location"><img src="img/icons/location.png" alt="">Nairobi, CBD</p>
+                             <p>We Offer best shirts, T shirts, pillows, hoodies etc heat press printings.</p>                            
+                        </div>
+                    </div>
+                </div>
+                <!-- End Sale -->
+
+                <!-- Single Featured Property -->
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="single-featured-property mb-50 wow fadeInUp" data-wow-delay="600ms">
+                        <!-- Property Thumbnail -->
+                        <div class="property-thumb">
+                            <img src="img/pic/ee-21.png" alt="">
+
+                            <div class="tag">
+                                <span>Community</span>
+                            </div>
+                            <div class="list-price">
+                                <p>Ksh. 0.00</p>
+                            </div>
+                        </div>
+                        <!-- Property Content -->
+                        <div class="property-content">
+                            <h5>Community Services</h5>
+                            <p class="location"><img src="img/icons/location.png" alt="">Nairobi, CBD</p>
+                             <p>We do community services to the needy, ophanage, churches , and old people</p>                            
+                        </div>
+                    </div>
+                </div>
+                <!-- End Sale -->
+
+                <!-- Single Featured Property -->
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="single-featured-property mb-50 wow fadeInUp" data-wow-delay="600ms">
+                        <!-- Property Thumbnail -->
+                        <div class="property-thumb">
+                            <img src="img/pic/ee-04.png" alt="">
+
+                            <div class="tag">
+                                <span>Negotiable</span>
+                            </div>
+                            <div class="list-price">
+                                <p>Ksh. 0.00</p>
+                            </div>
+                        </div>
+                        <!-- Property Content -->
+                        <div class="property-content">
+                            <h5>House Construction</h5>
+                            <p class="location"><img src="img/icons/location.png" alt="">Nairobi, CBD</p>
+                             <p>We Construct houses, schools, market places, toilets , halls  and roads.</p>                            
+                        </div>
+                    </div>
+                </div>
+                <!-- End Sale -->
+
+
+
             </div>
         </div>
     </section>
@@ -627,9 +703,9 @@
 
                             <img src="img/bg-img/footer.jpg" alt="">
                             <div class="footer-logo my-4">
-                                <img src="img/core-img/logo.png" alt="">
+                                <img src="img/core-img/logo1.png" alt="">
                             </div>
-                            <p><b>We are a construction company based in Nairobi kenya. We are the best constrction company offering the following....</b>
+                            <p>Elohay Empire Ltd is a registered business entity engaged in contracting and supply of a variety of....<a href="about-us.html">Read More</a>
                             </p>
                         </div>
                     </div>
@@ -651,9 +727,10 @@
                             </div>
                             <!-- Address --> 
                             <div class="address">
-                                <h6><img src="img/icons/phone-call.png" alt="">+254 720 628 137</h6>
-                                <h6><img src="img/icons/envelope.png" alt="">info@kimanisankara.co.ke</h6>
-                                <h6><img src="img/icons/location.png" alt=""> Nairobi, Kenyatta Ave, DB house,<br> P.O Box 1234-00100.</h6>
+                                <h6><img src="img/icons/phone-call.png" alt="">+254721378781 I +254737995755
+</h6>
+                                <h6><img src="img/icons/envelope.png" alt="">info@elohayempire.co.ke</h6>
+                                <h6><img src="img/icons/location.png" alt=""> AGIP HOUSE 2ND FLOOR,<br> ROOM 218.<br>P. O. BOX 66038 00800, NAIROBI, KENYA</h6>
                             </div>
                         </div>
                     </div>
@@ -669,16 +746,13 @@
                             <ul class="useful-links-nav d-flex align-items-center">
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#">About us</a></li>
-                                <li><a href="#">About us</a></li>
+                                <li><a href="#">Gifts</a></li>
                                 <li><a href="#">Services</a></li>
-                                <li><a href="#">Properties</a></li>
-                                <li><a href="#">Listings</a></li>
-                                <li><a href="#">Testimonials</a></li>
-                                <li><a href="#">Properties</a></li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">Testimonials</a></li>
+                                <li><a href="#">Community Services</a></li>
+                                <li><a href="#">Supplies</a></li>
+                                <li><a href="#">Roads</a></li>
+                                <li><a href="#">House Construction</a></li>
                                 <li><a href="#">Contact</a></li>
-                                <li><a href="#">Elements</a></li>
                                 <li><a href="#">FAQ</a></li>
                             </ul>
                         </div>
@@ -689,21 +763,21 @@
                         <div class="footer-widget-area mb-100">
                             <!-- Widget Title -->
                             <div class="widget-title">
-                                <h6>Featured Properties</h6>
+                                <h6>Featured Items</h6>
                             </div>
                             <!-- Featured Properties Slides -->
                             <div class="featured-properties-slides owl-carousel">
                                 <!-- Single Slide -->
                                 <div class="single-featured-properties-slide">
-                                    <a href="#"><img src="img/bg-img/fea-product.jpg" alt=""></a>
+                                    <a href="#"><img src="img/pic/ee-04.png" alt=""></a>
                                 </div>
                                 <!-- Single Slide -->
                                 <div class="single-featured-properties-slide">
-                                    <a href="#"><img src="img/bg-img/fea-product.jpg" alt=""></a>
+                                    <a href="#"><img src="img/pic/ee-40.png" alt=""></a>
                                 </div>
                                 <!-- Single Slide -->
                                 <div class="single-featured-properties-slide">
-                                    <a href="#"><img src="img/bg-img/fea-product.jpg" alt=""></a>
+                                    <a href="#"><img src="img/pic/ee-26.png" alt=""></a>
                                 </div>
                             </div>
                         </div>
