--- a/contact.html
+++ b/contact.html
@@ -220,13 +220,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.8496086611585!2d36.80005481475391!3d-1.2626038990790813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f176adea0f525%3A0x587d50bcb2ff7687!2sSankara%20Nairobi%2C%20Autograph%20Collection!5e0!3m2!1sen!2ske!4v1606572777531!5m2!1sen!2ske" width="1200" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.805759787697!2d36.82120981393465!3d-1.2908647990584778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f10d8c8c4ff0d%3A0x8674b6e558d52d8!2sAGIP%20house%2C%20Nairobi!5e0!3m2!1sen!2ske!4v1607245954265!5m2!1sen!2ske" width="1200" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
         </div>
     </div>
 
-   <!-- ##### Footer Area Start ##### -->
+       <!-- ##### Footer Area Start ##### -->
     <footer class="footer-area section-padding-100-0 bg-img gradient-background-overlay" style="background-image: url(img/bg-img/cta.jpg);">
         <!-- Main Footer Area -->
         <div class="main-footer-area">
@@ -245,7 +245,7 @@
                             <div class="footer-logo my-4">
                                 <img src="img/core-img/logo.png" alt="">
                             </div>
-                            <p><b>We are a construction company based in Nairobi kenya. We are the best constrction company offering the following....</b>
+                            <p>Elohay Empire Ltd is a registered business entity engaged in contracting and supply of a variety of....<a href="about-us.html">Read More</a>
                             </p>
                         </div>
                     </div>
@@ -267,9 +267,10 @@
                             </div>
                             <!-- Address --> 
                             <div class="address">
-                                <h6><img src="img/icons/phone-call.png" alt="">+254 720 628 137</h6>
-                                <h6><img src="img/icons/envelope.png" alt="">info@kimanisankara.co.ke</h6>
-                                <h6><img src="img/icons/location.png" alt=""> Nairobi, Kenyatta Ave, DB house,<br> P.O Box 1234-00100.</h6>
+                                <h6><img src="img/icons/phone-call.png" alt="">+254721378781 I +254737995755
+</h6>
+                                <h6><img src="img/icons/envelope.png" alt="">info@elohayempire.co.ke</h6>
+                                <h6><img src="img/icons/location.png" alt=""> AGIP HOUSE 2ND FLOOR,<br> ROOM 218.<br>P. O. BOX 66038 00800, NAIROBI, KENYA</h6>
                             </div>
                         </div>
                     </div>
@@ -285,16 +286,13 @@
                             <ul class="useful-links-nav d-flex align-items-center">
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#">About us</a></li>
-                                <li><a href="#">About us</a></li>
+                                <li><a href="#">Gifts</a></li>
                                 <li><a href="#">Services</a></li>
-                                <li><a href="#">Properties</a></li>
-                                <li><a href="#">Listings</a></li>
-                                <li><a href="#">Testimonials</a></li>
-                                <li><a href="#">Properties</a></li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">Testimonials</a></li>
+                                <li><a href="#">Community Services</a></li>
+                                <li><a href="#">Supplies</a></li>
+                                <li><a href="#">Roads</a></li>
+                                <li><a href="#">House Construction</a></li>
                                 <li><a href="#">Contact</a></li>
-                                <li><a href="#">Elements</a></li>
                                 <li><a href="#">FAQ</a></li>
                             </ul>
                         </div>
@@ -305,21 +303,21 @@
                         <div class="footer-widget-area mb-100">
                             <!-- Widget Title -->
                             <div class="widget-title">
-                                <h6>Featured Properties</h6>
+                                <h6>Featured Items</h6>
                             </div>
                             <!-- Featured Properties Slides -->
                             <div class="featured-properties-slides owl-carousel">
                                 <!-- Single Slide -->
                                 <div class="single-featured-properties-slide">
-                                    <a href="#"><img src="img/bg-img/fea-product.jpg" alt=""></a>
+                                    <a href="#"><img src="img/pic/ee-04.png" alt=""></a>
                                 </div>
                                 <!-- Single Slide -->
                                 <div class="single-featured-properties-slide">
-                                    <a href="#"><img src="img/bg-img/fea-product.jpg" alt=""></a>
+                                    <a href="#"><img src="img/pic/ee-40.png" alt=""></a>
                                 </div>
                                 <!-- Single Slide -->
                                 <div class="single-featured-properties-slide">
-                                    <a href="#"><img src="img/bg-img/fea-product.jpg" alt=""></a>
+                                    <a href="#"><img src="img/pic/ee-26.png" alt=""></a>
                                 </div>
                             </div>
                         </div>
