--- a/about-us.html
+++ b/about-us.html
@@ -121,7 +121,7 @@
                                     </ul>
                                 </li>
                                 
-                                <li><a href="listings.html">Properties</a></li>
+                                 <li><a href="expertise.html">Our Expertise</a></li>
                                 <li><a href="blog.html">Blog</a></li>
 
                                
