--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
                 <nav class="classy-navbar justify-content-between" id="southNav">
 
                     <!-- Logo -->
-                    <a class="nav-brand" href="index.html"><img src="img/core-img/logo.png" alt=""></a>
+                    <a class="nav-brand" href="index.html"><img src="img/core-img/logo1.png" alt=""></a>
 
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler">
@@ -121,7 +121,7 @@
                                     </ul>
                                 </li>
                                 
-                                <li><a href="listings.html">Properties</a></li>
+                                 <li><a href="expertise.html">Our Expertise</a></li>
                                 <li><a href="blog.html">Blog</a></li>
 
                                
@@ -393,7 +393,7 @@
 
                             <img src="img/bg-img/footer.jpg" alt="">
                             <div class="footer-logo my-4">
-                                <img src="img/core-img/logo.png" alt="">
+                                <img src="img/core-img/logo1.png" alt="">
                             </div>
                             <p>Elohay Empire Ltd is a registered business entity engaged in contracting and supply of a variety of....<a href="about-us.html">Read More</a>
                             </p>
