--- a/index.html
+++ b/index.html
@@ -156,31 +156,31 @@
                     <div class="row h-100 align-items-center">
                         <div class="col-12">
                             <div class="hero-slides-content">
-                                <h2 data-animation="fadeInUp" data-delay="100ms">Find your home</h2>
+                                <h2 data-animation="fadeInUp" data-delay="100ms">Get your home</h2>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- Single Hero Slide -->
-            <div class="single-hero-slide bg-img" style="background-image: url(img/bg-img/hero2.jpg);">
+            <div class="single-hero-slide bg-img" style="background-image: url(img/bg-img/print-01.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
                         <div class="col-12">
                             <div class="hero-slides-content">
-                                <h2 data-animation="fadeInUp" data-delay="100ms">Find your dream house</h2>
+                                <h2 data-animation="fadeInUp" data-delay="100ms">Design |  Print  |  Brand</h2>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- Single Hero Slide -->
-            <div class="single-hero-slide bg-img" style="background-image: url(img/bg-img/hero3.jpg);">
+            <div class="single-hero-slide bg-img" style="background-image: url(img/bg-img/com-01.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
                         <div class="col-12">
                             <div class="hero-slides-content">
-                                <h2 data-animation="fadeInUp" data-delay="100ms">Find your perfect house</h2>
+                                <h2 data-animation="fadeInUp" data-delay="100ms">Community Services</h2>
                             </div>
                         </div>
                     </div>
