--- a/page2.html
+++ b/page2.html
@@ -74,51 +74,36 @@
                                 <li><a href="about-us.html">About Us</a></li>
                                  <li><a href="#">Services</a>
                                     <div class="megamenu">
-                                        <ul class="single-mega cn-col-4">
+                                         <ul class="single-mega cn-col-4">
                                             <li class="title">CONSTRUCTIONS</li>
-                                            <li><a href="#">Residential Houses</a></li>
-                                            <li><a href="#">Rental Flats</a></li>
-                                            <li><a href="#">Roads</a></li>
-                                            <li><a href="#">Bridges</a></li>
-                                            <li><a href="#">School & Churches</a></li>
+                                            <li><a href="residential.html">Residential Houses</a></li>
+                                            <li><a href="flats.html">Rental Flats</a></li>
+                                            <li><a href="roads.html">Roads</a></li>
+                                            <li><a href="school.html">School & Churches</a></li>
                                         </ul>
                                         <ul class="single-mega cn-col-4">
                                             <li class="title">SUPPLIES</li>
-                                            <li><a href="#">Office Stationaries</a></li>
-                                            <li><a href="#">Constraction Materials</a></li>
-                                            <li><a href="#">Promotional Items</a></li>
-                                            <li><a href="#">Kitchen Items</a></li>
-                                            <li><a href="#">School Items</a></li>
+                                            <li><a href="office.html">Office Stationaries</a></li>
+                                            <li><a href="construction.html">Constraction Materials</a></li>
+                                            <li><a href="promotional.html">Promotional Items</a></li>
+                                            <li><a href="schoolitems.html">School Items</a></li>
                                         </ul>
                                         <ul class="single-mega cn-col-4">
                                             <li class="title">GRAPHIC DESIGN AND PRINTING</li>
-                                            <li><a href="#">Ebook Design</a></li>
-                                            <li><a href="#">Promotional Item Printing</a></li>
+                                            <li><a href="promotional.html">Promotional Item Printing</a></li>
                                             <li><a href="#">Logo Design</a></li>
-                                            <li><a href="#">Company Branding</a></li>
-                                            <li><a href="#">General printing</a></li>
+                                            <li><a href="promotional.html">Company Branding</a></li>
+                                            <li><a href="promotional.html">General printing</a></li>
                                         </ul>
                                         <ul class="single-mega cn-col-4">
                                             <li class="title">Gift & Community Services</li>
-                                            <li><a href="#">Food Distrubution</a></li>
-                                            <li><a href="#">Ophanage Visiting</a></li>
-                                            <li><a href="#">Branded T shirts</a></li>
-                                            <li><a href="#">Branded Notebooks</a></li>
-                                            <li><a href="#">Branded Cups</a></li>
+                                            <li><a href="food.html">Food Distrubution</a></li>
+                                            <li><a href="food.html">Ophanage Visiting</a></li>
+                                            <li><a href="promotional.html">Branded T shirts</a></li>
+                                            <li><a href="promotional.html">Branded Gifts</a></li>
+
                                         </ul>
                                     </div>
-                                </li>
-
-
-                                <li><a href="#">Our Works</a>
-                                    <ul class="dropdown">
-                                        <li><a href="#">Listings</a>
-                                            <ul class="dropdown">
-                                                <li><a href="listings.html">Listings</a></li>
-                                                <li><a href="single-listings.html">Single Listings</a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
                                 </li>
                                 
                                 <li><a href="expertise.html">Our Expertise</a></li>
