--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="top-header-area">
             <div class="h-100 d-md-flex justify-content-between align-items-center">
                 <div class="email-address">
-                   <a href="mailto:info@elohayempire.co.ke">info@elohayempire.co.ke</a>
+                   <a href="mailto:info@elohayempire.org">info@elohayempire.org</a>
                 </div>
                 <div class="phone-number d-flex">
                     <div class="icon">
@@ -108,6 +108,7 @@
                                 
                                 <li><a href="expertise.html">Our Expertise</a></li>
                                 <li><a href="blog.html">Blog</a></li>
+                                 <li><a href="#">E-Book</a></li>
 
                                
                                 <li><a href="contact.html">Contact</a></li>
@@ -713,7 +714,7 @@
                             <div class="address">
                                 <h6><img src="img/icons/phone-call.png" alt="">+254721378781 I +254737995755
 </h6>
-                                <h6><img src="img/icons/envelope.png" alt="">info@elohayempire.co.ke</h6>
+                                <h6><img src="img/icons/envelope.png" alt="">info@elohayempire.org</h6>
                                 <h6><img src="img/icons/location.png" alt=""> AGIP HOUSE 2ND FLOOR,<br> ROOM 218.<br>P. O. BOX 66038 00800, NAIROBI, KENYA</h6>
                             </div>
                         </div>
